manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-api
  namespace: minio-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-api
  template:
    metadata:
      labels:
        app: minio-api
    spec:
      containers:
      - name: minio-api
        image: localhost:32000/minio-api:1766422177
        ports:
        - containerPort: 8000
